--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -23,11 +23,21 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: Free disk space (清理空间)
+      uses: jlumbroso/free-disk-space@main
+      with:
+        tool-cache: false
+        android: true
+        dotnet: true
+        haskell: true
+        large-packages: true
+        docker-images: true
+        swap-storage: true
+
     - name: Initialization environment
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
         sudo -E apt-get -qq update
         sudo -E apt-get -qq install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses5-dev libssl-dev python3-setuptools rsync swig unzip zlib1g-dev file wget
         sudo -E apt-get -qq autoremove --purge
@@ -39,6 +49,7 @@ jobs:
     - name: Clone source code
       working-directory: /workdir
       run: |
+        df -hT # 确认清理后的空间
         git clone $REPO_URL -b $REPO_BRANCH lede
         ln -sf /workdir/lede $GITHUB_WORKSPACE/lede
 
@@ -52,25 +63,19 @@ jobs:
     - name: Generate Config
       run: |
         cd lede
-        # 设置针对 N5105 的核心架构
         echo "CONFIG_TARGET_x86=y" >> .config
         echo "CONFIG_TARGET_x86_64=y" >> .config
         echo "CONFIG_TARGET_x86_64_DEVICE_generic=y" >> .config
-        
-        # 基础固件设置：增大分区以利用你的 64G 硬盘
         echo "CONFIG_TARGET_KERNEL_PARTSIZE=64" >> .config
         echo "CONFIG_TARGET_ROOTFS_PARTSIZE=2048" >> .config
         
-        # 集成你要求的插件
+        # 插件集成
         echo "CONFIG_PACKAGE_luci-app-tailscale=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-passwall=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-openclash=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-dockerman=y" >> .config
-        
-        # 2.5G 网卡驱动 (i225/i226)
         echo "CONFIG_PACKAGE_kmod-igc=y" >> .config
         
-        # 自动让编译补全依赖
         make defconfig
 
     - name: Download package
