--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -1,4 +1,4 @@
-name: Build N5105 OpenWrt Pro
+name: Build N5105 OpenWrt Optimized
 
 on:
   repository_dispatch:
@@ -17,7 +17,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Free disk space (清理空间)
+    - name: Free disk space
       uses: jlumbroso/free-disk-space@main
       with:
         tool-cache: false
@@ -36,7 +36,6 @@ jobs:
         sudo -E apt-get -qq install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses5-dev libssl-dev python3-setuptools rsync swig unzip zlib1g-dev file wget
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
-        sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$USER /workdir
 
@@ -46,10 +45,9 @@ jobs:
         git clone $REPO_URL -b $REPO_BRANCH lede
         ln -sf /workdir/lede $GITHUB_WORKSPACE/lede
 
-    - name: Load custom feeds (整合增强源)
+    - name: Load custom feeds
       run: |
         cd lede
-        # 添加全能插件源 (含 mosDNS, ddns-go, iStore等)
         echo "src-git kenzo https://github.com/kenzok8/openwrt-packages" >> ./feeds.conf.default
         echo "src-git small https://github.com/kenzok8/small" >> ./feeds.conf.default
         ./scripts/feeds update -a
@@ -58,56 +56,52 @@ jobs:
     - name: Generate Config
       run: |
         cd lede
-        # 1. 硬件架构
+        # 基础架构
         echo "CONFIG_TARGET_x86=y" >> .config
         echo "CONFIG_TARGET_x86_64=y" >> .config
         echo "CONFIG_TARGET_x86_64_DEVICE_generic=y" >> .config
         
-        # 2. 汉化与分区 (针对64G硬盘)
+        # 汉化与分区
         echo "CONFIG_LUCI_LANG_zh_Hans=y" >> .config
         echo "CONFIG_PACKAGE_luci-i18n-base-zh-cn=y" >> .config
         echo "CONFIG_TARGET_KERNEL_PARTSIZE=64" >> .config
-        echo "CONFIG_TARGET_ROOTFS_PARTSIZE=2048" >> .config
+        echo "CONFIG_TARGET_ROOTFS_PARTSIZE=1024" >> .config
         
-        # 3. 核心驱动
+        # 驱动与核心工具
         echo "CONFIG_PACKAGE_kmod-igc=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-dockerman=y" >> .config
         echo "CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y" >> .config
         
-        # 4. 网络加速与工具
-        echo "CONFIG_PACKAGE_luci-app-turboacc=y" >> .config
-        echo "CONFIG_PACKAGE_luci-app-access-control=y" >> .config
-        echo "CONFIG_PACKAGE_luci-i18n-access-control-zh-cn=y" >> .config
-        
-        # 5. 你的核心需求插件 (包含汉化)
+        # 核心插件 (Passwall, OpenClash, Tailscale)
         echo "CONFIG_PACKAGE_luci-app-passwall=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-openclash=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-tailscale=y" >> .config
+        
+        # 功能插件 (ddns-go, mosDNS, iStore, 易有云)
         echo "CONFIG_PACKAGE_luci-app-ddns-go=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-mosdns=y" >> .config
-        echo "CONFIG_PACKAGE_luci-app-adguardhome=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-linkease=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-store=y" >> .config
         
-        # 自动补全汉化包和依赖
-        sed -i 's/^[ \t]*//g' .config
+        # 移除 AdGuardHome 以提速，后续建议在 iStore 中一键安装
+        
         make defconfig
 
     - name: Download package
       run: |
         cd lede
-        make download -j8
+        make download -j16
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
 
     - name: Compile the firmware
       run: |
         cd lede
-        echo -e "$(nproc) thread compile"
-        make -j$(nproc) || make -j1 || make -j1 V=s
+        # 强制多线程加速
+        make -j$(nproc) || make -j1 V=s
 
     - name: Upload firmware
       uses: actions/upload-artifact@v4
       with:
-        name: OpenWrt_N5105_Pro_Firmware
+        name: OpenWrt_N5105_Final
         path: lede/bin/targets/x86/64/*.img.gz
