--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -1,4 +1,4 @@
-name: Build N5105 OpenWrt Optimized
+name: Build N5105 OpenWrt Final-Fixed
 
 on:
   repository_dispatch:
@@ -17,16 +17,16 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Free disk space
+    - name: Extreme Free Disk Space (极度清理磁盘)
       uses: jlumbroso/free-disk-space@main
       with:
-        tool-cache: false
-        android: true
-        dotnet: true
-        haskell: true
-        large-packages: true
-        docker-images: true
-        swap-storage: true
+        tool-cache: true      # 清理工具缓存
+        android: true         # 移除 Android SDK (占用巨大)
+        dotnet: true          # 移除 .NET 环境
+        haskell: true         # 移除 Haskell
+        large-packages: true  # 移除大型预装包
+        docker-images: true   # 移除默认 Docker 镜像
+        swap-storage: true    # 优化交换空间
 
     - name: Initialization environment
       env:
@@ -36,12 +36,14 @@ jobs:
         sudo -E apt-get -qq install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses5-dev libssl-dev python3-setuptools rsync swig unzip zlib1g-dev file wget
         sudo -E apt-get -qq autoremove --purge
         sudo -E apt-get -qq clean
+        sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$USER /workdir
 
     - name: Clone source code
       working-directory: /workdir
       run: |
+        df -hT # 查看当前可用空间，确保有 50G+
         git clone $REPO_URL -b $REPO_BRANCH lede
         ln -sf /workdir/lede $GITHUB_WORKSPACE/lede
 
@@ -56,52 +58,47 @@ jobs:
     - name: Generate Config
       run: |
         cd lede
-        # 基础架构
+        # 基础架构与 N5105 驱动
         echo "CONFIG_TARGET_x86=y" >> .config
         echo "CONFIG_TARGET_x86_64=y" >> .config
         echo "CONFIG_TARGET_x86_64_DEVICE_generic=y" >> .config
+        echo "CONFIG_PACKAGE_kmod-igc=y" >> .config
         
-        # 汉化与分区
+        # 汉化与分区 (2G根目录)
         echo "CONFIG_LUCI_LANG_zh_Hans=y" >> .config
         echo "CONFIG_PACKAGE_luci-i18n-base-zh-cn=y" >> .config
         echo "CONFIG_TARGET_KERNEL_PARTSIZE=64" >> .config
-        echo "CONFIG_TARGET_ROOTFS_PARTSIZE=1024" >> .config
+        echo "CONFIG_TARGET_ROOTFS_PARTSIZE=2048" >> .config
         
-        # 驱动与核心工具
-        echo "CONFIG_PACKAGE_kmod-igc=y" >> .config
-        echo "CONFIG_PACKAGE_luci-app-dockerman=y" >> .config
-        echo "CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y" >> .config
-        
-        # 核心插件 (Passwall, OpenClash, Tailscale)
+        # 你的核心插件需求
         echo "CONFIG_PACKAGE_luci-app-passwall=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-openclash=y" >> .config
+        echo "CONFIG_PACKAGE_luci-app-dockerman=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-tailscale=y" >> .config
-        
-        # 功能插件 (ddns-go, mosDNS, iStore, 易有云)
         echo "CONFIG_PACKAGE_luci-app-ddns-go=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-mosdns=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-linkease=y" >> .config
         echo "CONFIG_PACKAGE_luci-app-store=y" >> .config
-        
-        # 移除 AdGuardHome 以提速，后续建议在 iStore 中一键安装
+        echo "CONFIG_PACKAGE_luci-app-access-control=y" >> .config
         
         make defconfig
 
     - name: Download package
       run: |
         cd lede
-        make download -j16
+        make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
 
     - name: Compile the firmware
       run: |
         cd lede
-        # 强制多线程加速
+        echo -e "$(nproc) thread compile"
+        # 优先多线程，失败则自动切换单线程
         make -j$(nproc) || make -j1 V=s
 
     - name: Upload firmware
       uses: actions/upload-artifact@v4
       with:
-        name: OpenWrt_N5105_Final
+        name: OpenWrt_N5105_Final_Result
         path: lede/bin/targets/x86/64/*.img.gz
