--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -1,4 +1,4 @@
-name: Build N5105 OpenWrt Final-Fixed
+name: Build N5105 OpenWrt Base-iStore
 
 on:
   repository_dispatch:
@@ -17,25 +17,19 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Extreme Free Disk Space (极度清理磁盘)
+    - name: Extreme Free Space
       uses: jlumbroso/free-disk-space@main
       with:
-        tool-cache: true      # 清理工具缓存
-        android: true         # 移除 Android SDK (占用巨大)
-        dotnet: true          # 移除 .NET 环境
-        haskell: true         # 移除 Haskell
-        large-packages: true  # 移除大型预装包
-        docker-images: true   # 移除默认 Docker 镜像
-        swap-storage: true    # 优化交换空间
+        tool-cache: true
+        android: true
+        dotnet: true
+        large-packages: true
+        docker-images: true
 
     - name: Initialization environment
-      env:
-        DEBIAN_FRONTEND: noninteractive
       run: |
         sudo -E apt-get -qq update
         sudo -E apt-get -qq install -y build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses5-dev libssl-dev python3-setuptools rsync swig unzip zlib1g-dev file wget
-        sudo -E apt-get -qq autoremove --purge
-        sudo -E apt-get -qq clean
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /workdir
         sudo chown $USER:$USER /workdir
@@ -43,43 +37,39 @@ jobs:
     - name: Clone source code
       working-directory: /workdir
       run: |
-        df -hT # 查看当前可用空间，确保有 50G+
         git clone $REPO_URL -b $REPO_BRANCH lede
         ln -sf /workdir/lede $GITHUB_WORKSPACE/lede
 
     - name: Load custom feeds
       run: |
         cd lede
+        # 只添加一个全能插件源，确保 iStore 商店可用
         echo "src-git kenzo https://github.com/kenzok8/openwrt-packages" >> ./feeds.conf.default
-        echo "src-git small https://github.com/kenzok8/small" >> ./feeds.conf.default
         ./scripts/feeds update -a
         ./scripts/feeds install -a
 
     - name: Generate Config
       run: |
         cd lede
-        # 基础架构与 N5105 驱动
+        # 核心硬件支持
         echo "CONFIG_TARGET_x86=y" >> .config
         echo "CONFIG_TARGET_x86_64=y" >> .config
         echo "CONFIG_TARGET_x86_64_DEVICE_generic=y" >> .config
-        echo "CONFIG_PACKAGE_kmod-igc=y" >> .config
+        echo "CONFIG_PACKAGE_kmod-igc=y" >> .config # 2.5G网卡驱动
         
-        # 汉化与分区 (2G根目录)
+        # 汉化
         echo "CONFIG_LUCI_LANG_zh_Hans=y" >> .config
         echo "CONFIG_PACKAGE_luci-i18n-base-zh-cn=y" >> .config
-        echo "CONFIG_TARGET_KERNEL_PARTSIZE=64" >> .config
-        echo "CONFIG_TARGET_ROOTFS_PARTSIZE=2048" >> .config
         
-        # 你的核心插件需求
-        echo "CONFIG_PACKAGE_luci-app-passwall=y" >> .config
-        echo "CONFIG_PACKAGE_luci-app-openclash=y" >> .config
-        echo "CONFIG_PACKAGE_luci-app-dockerman=y" >> .config
-        echo "CONFIG_PACKAGE_luci-app-tailscale=y" >> .config
-        echo "CONFIG_PACKAGE_luci-app-ddns-go=y" >> .config
-        echo "CONFIG_PACKAGE_luci-app-mosdns=y" >> .config
-        echo "CONFIG_PACKAGE_luci-app-linkease=y" >> .config
+        # 磁盘空间设置
+        echo "CONFIG_TARGET_KERNEL_PARTSIZE=64" >> .config
+        echo "CONFIG_TARGET_ROOTFS_PARTSIZE=1024" >> .config
+        
+        # 只集成最关键的三个软件：商店、Docker、Passwall
+        # 其他的（OpenClash, AdGuard, mosDNS等）等进系统后从商店安装
         echo "CONFIG_PACKAGE_luci-app-store=y" >> .config
-        echo "CONFIG_PACKAGE_luci-app-access-control=y" >> .config
+        echo "CONFIG_PACKAGE_luci-app-dockerman=y" >> .config
+        echo "CONFIG_PACKAGE_luci-app-passwall=y" >> .config
         
         make defconfig
 
@@ -87,18 +77,14 @@ jobs:
       run: |
         cd lede
         make download -j8
-        find dl -size -1024c -exec ls -l {} \;
-        find dl -size -1024c -exec rm -f {} \;
 
     - name: Compile the firmware
       run: |
         cd lede
-        echo -e "$(nproc) thread compile"
-        # 优先多线程，失败则自动切换单线程
         make -j$(nproc) || make -j1 V=s
 
     - name: Upload firmware
       uses: actions/upload-artifact@v4
       with:
-        name: OpenWrt_N5105_Final_Result
+        name: OpenWrt_N5105_Base_Firmware
         path: lede/bin/targets/x86/64/*.img.gz
